# dat4_poke_science

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: actions.yml
data/: pokemon.csv  pokemonDP.csv
data/v1/: battle_data_diff.csv  match.csv
data/v2/: battle_data.csv  match.csv
src/: ApiToCsv.py  PowerCalculator.py  api_file_handler.py  main.py  poke_testing.py
src/v1/: battle_data.csv  battle_data_diff.csv  knn.py  linear_regression.py  linear_regression_diff.py  poke_battle.py  poke_testing.py  rfc.py  visualization.py
src/v1/ML_models/: nerual_network.py  perceptron.py  perceptron_diff.py  rfc.py
src/v2/: battle_data.csv  perceptron.py  perceptron_diff.py  poke_battle.py  poke_plot.py  poke_testing.py  relative_power.py  rfc.py  visualization.py
src/v2/ML_models/: knn.py  neural_network.py  perceptron.py  rfc.py
